// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`schema for almostEligible 1`] = `
{
  "caseNotes": {
    "Case Plan Goals": [
      {
        "eventDate": null,
        "noteBody": "Maintain good health",
        "noteTitle": "In progress",
      },
    ],
  },
  "eligibleCriteria": {
    "usPaMeetsSpecialCircumstancesCriteriaForSanctions": {
      "caseType": "special probation or parole case",
      "sanctionType": "high or medium",
    },
    "usPaNotEligibleOrMarkedIneligibleForAdminSupervision": {},
  },
  "externalId": "CLIENT005",
  "ineligibleCriteria": {
    "usPaMeetsSpecialCircumstancesCriteriaForTimeServed": {
      "caseType": "special probation or parole case",
      "eligibleDate": 2021-12-26T00:00:00.000Z,
      "yearsRequiredToServe": 10,
    },
  },
  "isAlmostEligible": true,
  "isEligible": false,
  "stateCode": "US_PA",
}
`;

exports[`schema for fullyEligible 1`] = `
{
  "caseNotes": {
    "Case Plan Goals": [
      {
        "eventDate": null,
        "noteBody": "Maintain good health",
        "noteTitle": "In progress",
      },
    ],
  },
  "eligibleCriteria": {
    "usPaMeetsSpecialCircumstancesCriteriaForSanctions": {
      "caseType": "special probation or parole case",
      "sanctionType": "high",
    },
    "usPaMeetsSpecialCircumstancesCriteriaForTimeServed": {
      "caseType": "special probation or parole case",
      "eligibleDate": 2021-12-06T00:00:00.000Z,
      "yearsRequiredToServe": 10,
    },
    "usPaNotEligibleOrMarkedIneligibleForAdminSupervision": {},
  },
  "externalId": "CLIENT004",
  "ineligibleCriteria": {},
  "isAlmostEligible": false,
  "isEligible": true,
  "stateCode": "US_PA",
}
`;
